# marsipan

./: .gitignore  Cargo.toml
damnpacket/: Cargo.toml
damnpacket/src/: lib.rs  lib.rs.bk  tablumps.rs
migrations/20170501041154_create_welcomes/: down.sql  up.sql
src/: codec.rs  commands.rs  event.rs  handler.rs  hooks.rs  main.rs  messagequeue.rs
src/commands/: about.rs  commands.rs  echo.rs  foobar.rs  mod.rs  ping.rs  prelude.rs  sleep.rs  welcome.rs  wordwar.rs
string/: Cargo.toml
string/src/: lib.rs
