[package]
name = "marsipan"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.bio>"]

[dependencies]
damnpacket = { path = "damnpacket" }
rustc_version_runtime = "*"
tokio-proto = "0.1"
env_logger = "*"
log = "*"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"
bytes = "0.4"
nom = "*"
futures = "*"
ansi_term = "*"
lazy_static = "0.2"
