[package]
name = "marsipan"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.bio>"]

[dependencies]
ansi_term = "*"
bytes = "0.4"
chrono = "*"
damnpacket = { path = "damnpacket" }
diesel = { version = "*", features = ["sqlite"] }
diesel_codegen = { version = "*", features = ["sqlite"] }
dotenv = "*"
env_logger = "*"
futures = "*"
lazy_static = "0.2"
libsqlite3-sys = { version = "=0.7.1", optional = true }
log = "*"
rustc_version_runtime = "*"
state = "*"
string = { path = "string" }
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-timer = "0.1"

[dependencies.nom]
version = "*"
features = [ "verbose-errors" ]
